syntax = "proto3";

package store;

service Users {
    rpc CreateUser (CreateUserRequest) returns (User);
    rpc ReadUser (UserRequest) returns (User);
    rpc UpdateUser (UpdateUserRequest) returns (User);
    rpc DeleteUser (UserRequest) returns (User);
    rpc ListUsers (ListUsersRequest) returns (BatchUsers);
}

message ListUsersRequest {
    int64 last_access_max = 1;
}

message CreateUserRequest {
    string name = 1;
    string email = 2;
}

message UserRequest {
    string id = 1;
}

message UpdateUserRequest {
    string id = 1;
    string name = 2;
    string email = 3;
}

message User {
    string id = 1;
    string name = 2;
    string email = 3;
    int64 last_access = 4;
}

message BatchUsers {
    repeated User users = 1;
}